# private-inclusion-proofs

./: .gitignore  Cargo.toml  Makefile  buildenv.mk
.github/workflows/: relyance-sci.yml
src/: lib.rs  main.rs  utils.rs
tree/: Cargo.toml
tree/src/: hash.rs  lib.rs  main.rs  utils.rs
tree/src/poseidon/: mod.rs
tree/src/utils/: mod.rs  non_sgx.rs
trusted/: Cargo.toml  Enclave.edl  Makefile
trusted/src/: lib.rs
untrusted/: .gitignore  Cargo.toml  build.rs
untrusted/src/: main.rs
