[package]
name = "private-inclusion-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned-cmov = {git = "https://github.com/mobilecoinfoundation/mc-oblivious.git"}
typenum = "1.17.0"
ruint = { version = "1.2.0", features = ["serde", "num-bigint", "ark-ff"] }
semaphore = { git = "https://github.com/worldcoin/semaphore-rs" }
hex = "0.4.3"
rand = "0.8.5"

[profile.release]
panic = "abort"
overflow-checks = true
codegen-units = 1
lto = true
strip = true

[profile.dev]
panic = "abort"

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
