[package]
name = "tree"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned-cmov = {git = "https://github.com/mobilecoinfoundation/mc-oblivious.git"}
typenum = "1.17.0"
rand = {version = "0.8.5", default-features = false }
rand_chacha = {version = "0.3.1", default-features = false }
subtle = { version = "2.5.0", default-features = false}

# SGX
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"], tag = "v1.1.6", optional = true }

# Non-SGX
ruint = { version = "1.2.0",  default-features = false, features = ["serde", "num-bigint", "ark-ff"] , optional = true}
hex = {version = "0.4.3", default-features = false , optional = true}
once_cell = {version = "1.8" , optional = true}
ark-bn254 = { version = "0.3.0" , optional = true}
ark-ff = { version = "0.3.0", default-features = false , optional = true}

[features]
default = ["std"]
sgx = ["dep:sgx_tstd"]
std = ["dep:ruint", "dep:hex", "dep:once_cell", "dep:ark-bn254", "dep:ark-ff"]


[profile.release]
panic = "abort"
overflow-checks = true
codegen-units = 1
lto = true
strip = true

[profile.dev]
panic = "abort"

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
