[package]
name = "trusted"
version = "0.1.0"
edition = "2021"

[lib]
name = "enclave" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]



[dependencies]
tree = {path = "./../tree"}


[target.'cfg(not(target_env = "sgx"))'.dependencies] # You can remove what you don't need, except types and tstd
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag = "v1.1.6" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"], tag = "v1.1.6" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag = "v1.1.6" }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag = "v1.1.6" }